test/files/neg/macro-invalidusage-presuper/Impls_1.scala
import scala.reflect.macros.Context

object Impls {
  def impl(c: Context) = c.literalUnit
}